# backend-invsmart

./: .gitignore  Learn.txt  README.md  alembic.ini  dump.rdb  pyproject.toml  requirements.txt
app/: config.py  main.py
app/auth/: auth_routes.py  auth_schemas.py  auth_service.py  auth_utils.py
app/books/: book_routes.py  book_schemas.py  book_service.py
app/config/: dbconfig.py  dbsettings.py  democonfig.py  logger.py  middleware.py  redis_config.py  redis_connect.py  settings.py  tokenconfig.py
app/config/migrations/: env.py
app/config/migrations/versions/: 01dfb34d5b34_new_user_uid_table_added.py  519a96fd36e1_add_review_table.py  85c1d754b211_add_roles_to_users.py  88846f7c9c05_init.py  9573aab1e1b7_add_password_hash.py  b42b0283c7bf_new_db_changes.py  ead71e6e42c9_add_newly_db.py
app/core/: error.py
app/data/: book_data.py
app/db/: dbconfig.py  model.py  models.py
app/mail/: mail_config.py
app/model/: authmodel.py  bookmodel.py  get_posts.py  mixins.py  person.py  role.py  user_role.py  users.py
app/repository/: routes.py  schemas.py
app/reviews/: review_routes.py  review_service.py
app/router/: auth_routes.py  book_routes.py  demo_routes.py  routes.py
app/schemas/: auth_schemas.py
app/service/: auth_service.py  book_service.py  demo.py  service.py
app/tags/: tags_routes.py  tags_service.py
app/utils/: auth_utils.py
migrations/: env.py
