[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["prathamkumar <prathamkumar1985@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
python-multipart = "^0.0.17"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
routes = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start= "app.main:start"